<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Track-Share Location</string>
    <string name="channel_name">Set Mobile No : </string>
    <string name="name_name">Set Your Name : </string>
    <string name="share_button">Share Your Location</string>
    <string name="follow_button">View Friend\'s Location</string>
    <string name="gmaps">Google Maps</string>
    <string name="mapbox">MapBox</string>
    <string name="channel_hint">Please enter your or friend mobile no. </string>
    <string name="name_hint">Please enter your name. </string>
    <string name="gmaps_share_location_activity">Share Location Activity</string>
    <string name="gmaps_follow_location_activity">Follow Location Activity</string>
    <string name="mbox_share_location_activity">Share Location Activity</string>
    <string name="mbox_follow_location_activity">Follow Location Activity</string>
    <string name="share_location">Start Sharing Your Location</string>
    <string name="follow_location">Start Viewing Your Friend\'s Location</string>
    <!-- <string name="action_settings">Settings</string> -->




    <!--for the map demo-->
    <string name="no_location_data_provided">no location data provided</string>
    <string name="service_not_available">service not available</string>
    <string name="invalid_lat_long_used">invalid lat long used</string>
    <string name="no_address_found">no address found</string>
    <string name="address_found">address found</string>


</resources>
