<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="end"
            android:text="@string/channel_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/channelEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="11"
            android:hint="@string/channel_hint"
            android:textColor="@color/red"
            android:textColorHint="@color/hint"
            android:inputType="phone" >

            <requestFocus />
        </EditText>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"

            android:gravity="end"
            android:text="@string/name_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="16"
            android:hint="@string/name_hint"
            android:textColor="@color/red"
            android:textColorHint="@color/hint"
            android:inputType="text" >
        </EditText>

    </LinearLayout>

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:gravity="center"
        android:onClick="shareLocation"
        android:padding="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/share_button"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/light_blue" />

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:gravity="center"
        android:onClick="followLocation"
        android:padding="20dp"
        android:layout_marginTop="1dp"
        android:text="@string/follow_button"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/light_blue" />


</LinearLayout>